# ocaml-index

./: .gitignore  .ocamlformat-ignore  CHANGES.md  LICENSE  README.md  dune-project  ocaml-index.opam  ocaml-index.opam.template  ocaml-uideps.opam
.github/workflows/: main.yml
lib/: dune  file_format.ml  file_format.mli  import.ml  index.ml  index_format.ml  log.ml  log.mli  shape_reduce.ml  uideps.ml
tests/: cmd.t  dune  interfaces.t  local-shape-and-include.t  transitive-deps.t  tuideps.t  uideps.t
tests/cmd.t/: run.t
